--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,6 @@ Flask==2.1.2
 Flask_Login==0.6.1
 Flask_SQLAlchemy==2.5.1
 gunicorn==20.1.0
+psycopg2-binary==2.9.3
 SQLAlchemy==1.4.39
 Werkzeug==2.1.2
